--- a/results.Rmd
+++ b/results.Rmd
@@ -355,4 +355,4 @@ fig4_Agriculture_country <- ggplot(df_landuse_Agriculture, aes(x=Year,y=as.numer
 
 plot(fig4_Agriculture_country)
 ```
-From our analysis to greenhouse gases, in 2010, the greenhouse gas emmision of Brazil has a sharp drop. This may attribute to the changes in forest land and agricultura area in Brazil. Agriculture accounts for the largest share of Brazil’s greenhouse-gas output.
+From our analysis to greenhouse gases, in 2010, the greenhouse gas emission of Brazil has a sharp drop. This may attribute to the changes in forest land and agricultural area in Brazil. Brazil has the world's largest remaining tropical forest, accounting for roughly one-third of all remaining rain forests. The major sources of Brazil's greenhouse gas emission are land-use change and the agriculture. From the graph of changes in forest area, we can tell that from 2010, the rate of deforestation in Brazil has continued to fall However, even thought Brazil succeed in reducing deforestation, the emissions from agriculture and other industries are rising. Based on the graph of changes in agricultural area, we see that land used for agriculture is increasing a lot. This might attribute to the continuous increasing in greenhouse gases after the sharp drop. 
